tests/ui/union/union-empty.stderr
error: unions cannot have zero fields
  --> $DIR/union-empty.rs:1:1
   |
LL | union U {}
   | ^^^^^^^^^^

error: aborting due to previous error

