tests/ui/union/union-empty.rs
union U {} //~ ERROR unions cannot have zero fields

fn main() {}
